# moku

./: .dockerignore  .env.docker  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  test.py
apps/backend/: Dockerfile  pyproject.toml
apps/backend/alembic/: env.py  script.py.mako
apps/backend/alembic/versions/: 202606160001_initial_backend_foundation.py  202606170001_global_sentence_text_uniqueness.py  202606180001_anki_schedule_status.py  202606190001_fsrs_card_state.py  202606210001_sentence_max_content_word_rank.py  202606210002_bm25_preset_indexes.py  202606210003_bm25_covering_indexes.py  202606210004_bm25_index_postings.py  202606230001_learner_notes.py  202606240001_dictionary.py
apps/backend/scripts/: inspect_anki_package.py
apps/backend/src/moku_backend/: __init__.py  config.py  main.py
apps/backend/src/moku_backend/api/: deps.py
apps/backend/src/moku_backend/api/v1/: dictionary.py  health.py  learner_cards.py  recommendations.py  router.py
apps/backend/src/moku_backend/cli/: app.py
apps/backend/src/moku_backend/db/: engine.py  metadata.py
apps/backend/src/moku_backend/persistence/models/: __init__.py  corpus.py  dictionary.py  srs.py
apps/backend/src/moku_backend/persistence/repositories/: bm25_index_repository.py  dictionary_repository.py  import_repository.py  learner_repository.py  sentence_repository.py
apps/backend/src/moku_backend/services/: anki_connect_client.py  anki_import_service.py  anki_package_import_service.py  anki_package_reader.py  corpus_import_service.py  dictionary_import_service.py  dictionary_service.py  learner_card_identity.py  learner_card_service.py  recommendation_service.py
apps/backend/src/moku_backend/speech/: __init__.py  cache.py  providers.py  service.py  types.py
apps/backend/tests/: test_anki_connect_client.py  test_anki_import_service.py  test_anki_package_import_service.py  test_anki_package_reader.py  test_bm25_index_models.py  test_bm25_index_repository.py  test_cli_import_anki.py  test_cli_import_corpus.py  test_cli_import_dictionary.py  test_corpus_import_service.py  test_dictionary_api.py  test_dictionary_import_service.py  test_dictionary_models.py  test_dictionary_repository.py  test_dictionary_service.py  test_health.py  test_import_recommendations_integration.py  test_learner_card_service.py  test_learner_cards_api.py  test_learner_repository.py  test_recommendation_top_k_allowed_words.py  test_sentence_repository.py  test_text_to_speech.py
notebooks/: sentence_retrieval_experiment.ipynb
