[project]
name = "moku"
version = "0.1.0"
description = "Sentence retrieval experiments for dynamic spaced-repetition language learning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.0.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "joblib>=1.5.3",
    "jupyterlab>=4.2.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pkuseg>=0.0.25",
    "pyarrow>=17.0.0",
    "tqdm>=4.66.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]
