[project]
name = "moku-workspace"
version = "0.1.0"
description = "Backend and research workspace for dynamic spaced-repetition language learning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyinstrument>=5.1.2",
]

[project.optional-dependencies]
notebooks = [
    "datasets>=3.0.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "joblib>=1.5.3",
    "jupyterlab>=4.2.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pkuseg>=0.0.25",
    "pyarrow>=17.0.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/backend",
    "packages/moku-core",
]

[tool.uv.sources]
moku-backend = { workspace = true }
moku-core = { workspace = true }

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]

[tool.ruff]
line-length = 100
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
markers = [
    "integration: tests that need external services such as PostgreSQL",
]
pythonpath = [
    "apps/backend/src",
    "packages/moku-core/src",
]
