[project]
name = "moku-backend"
version = "0.1.0"
description = "FastAPI backend for Moku."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.122.0",
    "fsrs>=6.3.1,<7",
    "moku-core",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "typer>=0.20.0",
    "uvicorn[standard]>=0.38.0",
    "zstandard>=0.23.0",
]

[project.optional-dependencies]
corpus-hf = ["moku-core[corpus-hf]"]
optimizer = ["fsrs[optimizer]>=6.3.1,<7"]
zh = ["moku-core[zh]"]

[project.scripts]
moku-backend = "moku_backend.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
